[package]
name = "gland"
description = "TUI library"
version = "0.3.1"
edition = "2021"
authors = ["ItsEthra"]
license = "MIT"
repository = "https://github.com/ItsEthra/gland"

[features]
event-stream = ["crossterm/event-stream"]

[[example]]
name = "simple"
required-features = ["event-stream"]

[dependencies]
crossterm = "0.27.0"
tokio = { version = "1.32.0", features = ["time", "rt"] }
futures-util = "0.3.29"
ratatui = "0.25.0"
twox-hash = "1.6.3"
tokio-stream = { version = "0.1.14", features = ["time"] }

[dev-dependencies]
ratatui = { version = "0.25.0", features = ["crossterm"] }
tokio = { version = "1.32.0", features = ["macros"] }

[package.metadata.docs.rs]
all-features = true
